@@ -10,6 +10,7 @@ import lombok.EqualsAndHashCode;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * <p>
@@ -64,7 +65,7 @@ public final class TransactionActivated extends BaseTransactionWithPaymentToken 
                                                 n.transactionDescription().value(),
                                                 n.transactionAmount().value()
                                         )
-                                ).collect(Collectors.toList()),
+                                ).toList(),
                         faultCode,
                         faultCodeString
                 )
